--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1170,7 +1170,7 @@ textarea {
 
 .breadcrumb__shape_dev2 img {
   position: absolute;
-  z-index: ;
+  z-index: 0;
 }
 .breadcrumb__shape_dev2 img:nth-child(1) {
   right: 20%;
