--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1179,7 +1179,7 @@ textarea {
 }
 @media (max-width: 767.98px) {
   .breadcrumb__shape_dev2 img:nth-child(1) {
-    left: 10%;
+    left: 80%;
   }
 }
 .breadcrumb__shape_dev2 img:nth-child(2) {
@@ -1190,6 +1190,8 @@ textarea {
 @media (max-width: 767.98px) {
   .breadcrumb__shape_dev2 img:nth-child(2) {
     left: 40%;
+    display: none;
+   
   }
 }
 .breadcrumb__shape_dev2 img:nth-child(3) {
@@ -1199,6 +1201,7 @@ textarea {
 .breadcrumb__shape_dev2 img:nth-child(4) {
   right: 42%;
   top: 0;
+  display: none;
 }
 @media (max-width: 767.98px) {
   .breadcrumb__shape_dev2 img:nth-child(4) {
@@ -2977,12 +2980,24 @@ html[lang="ar"] .tgmobile__menu .navigation li > a {
   top: -30%;
   animation: heartbeat 4s infinite alternate;
 }
+
 @media (max-width: 1500px) {
   .banner__shape-two img {
     left: -20%;
     top: -34%;
+    
   }
 }
+
+@media (max-width: 730px) {
+  .banner__shape-two img {
+    left: -50%;
+    top: -34%;
+    
+  }
+}
+
+
 .banner-social {
   display: -webkit-box;
   display: -moz-box;
@@ -12520,7 +12535,8 @@ margin-bottom: 20px;
 .contact-map {
   width: 100%;
   height: 490px;
-  margin-bottom: 70px;
+  /* margin-bottom: 10px; */
+  margin-top: 60px;
 }
 @media (max-width: 767.98px) {
   .contact-map {
@@ -12647,7 +12663,18 @@ margin-bottom: 20px;
   font-size: 15px;
   color: var(--tg-theme-secondary);
   height: 50px;
+
 }
+
+@media (max-width: 572px) {
+  .contact__form-wrap{
+    
+     
+  }
+}
+
+
+
 /*devsection*/
 .contact__form-wrap form .form-grp select {
   width: 100%;
