home page fond style reduce ok 18 01

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4201,7 +4201,8 @@ text-align: initial;
   align-items: center;
   border-inline-start: 1.5px solid #110B7999; 
   justify-content: flex-start;
-  padding-inline: 100px; 
+  /* padding-inline: 100px;  */
+  /* background-color: red; */
 }
 
 .about__list-box-two::before {
@@ -4213,7 +4214,7 @@ text-align: initial;
   padding-top: 10px;
   font-size: 16px;
   height: 60px;
-  text-align:start;
+  /* text-align:start; */
   font-weight: 400;
   color: #28273999;
 }
@@ -4225,7 +4226,7 @@ text-align: initial;
     border-top: 2px solid #110B7999;
   }
   .about__list-box-two p{
-    text-align: center;
+    /* text-align: center; */
   }
 }
 .about__list-img {
