--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -12647,6 +12647,18 @@ margin-bottom: 20px;
     padding: 100px 0;
   }
 }
+
+
+@media (max-width: 767.98px) {
+  
+   .new_compaint{
+     
+       padding-left: 100px;
+   }
+}
+
+
+
 .contact-map {
   width: 100%;
   height: 490px;
@@ -12737,7 +12749,7 @@ margin-bottom: 20px;
   -ms-border-radius: 8px;
   border-radius: 8px;
   padding: 35px 40px 40px;
-  margin-left: 30px;
+  margin-left: 100px;
 }
 @media (max-width: 1199.98px) {
   .contact__form-wrap {
@@ -12784,7 +12796,8 @@ margin-bottom: 20px;
 @media (max-width: 572px) {
   .contact__form-wrap{
     
-     
+       width: 350px;
+       margin-bottom: 40px;
   }
 }
 
