--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -12756,6 +12756,7 @@ margin-bottom: 20px;
     padding: 35px 20px 40px;
     margin-left: 0;
     width: 390px;
+    margin-bottom: 30px;
    
 
    }
@@ -12766,6 +12767,7 @@ margin-bottom: 20px;
   .contact__form-wrap {
     
     width: 350px;
+    margin-bottom: 30px;
    
 
    }
